--- a/App_LUMINOVA/templates/compras/compras_desglose.html
+++ b/App_LUMINOVA/templates/compras/compras_desglose.html
@@ -32,51 +32,51 @@
 
 {% block content %}
 
-    <h1 class = "text-center">Ordenes de compra pendiente</h1>
+    <h1 class = "text-center">Órdenes de Compra Pendiente</h1>
 
     <table class="table">
   <thead class="table-primary rounded-top">
     <tr>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">N°OC</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Estado de OC</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Categoria</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Cantidad de items</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Monto Total (US$$)</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha Estimada de Entrega</th>
-      <th scope="col" class="text-center align-middle" style="background-color: #0d6efd; color: white;">N°Tracking</th>
+      <th scope="col" class="align-middle color-thead">N°OC</th>
+      <th scope="col" class="align-middle color-thead">Estado de OC</th>
+      <th scope="col" class="align-middle color-thead">Categoría</th>
+      <th scope="col" class="align-middle color-thead">Fecha</th>
+      <th scope="col" class="align-middle color-thead">Cantidad de items</th>
+      <th scope="col" class="align-middle color-thead">Monto Total (US$$)</th>
+      <th scope="col" class="align-middle color-thead">Fecha Estimada de Entrega</th>
+      <th scope="col" class="align-middle color-thead">N°Tracking</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td class="text-center align-middle"><a href="#">OCOOO5</a></td>
-      <td class="text-center align-middle">• Pendiente a comprar</td>
-      <td class="text-center align-middle">Modulos led</td>
-      <td class="text-center align-middle">22/07/2025</td>
+      <td class="align-middle"><a href="#">OCOOO5</a></td>
+      <td class="align-middle">• Pendiente a comprar</td>
+      <td class="align-middle">Modulos led</td>
+      <td class="align-middle">22/07/2025</td>
       <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
     </tr>
     <tr>
-      <td class="text-center align-middle">OCOOO4</td>
-      <td class="text-center align-middle">• Pendiente a comprar</td>
-      <td class="text-center align-middle">Reflector led</td>
-      <td class="text-center align-middle">22/07/2025</td>
+      <td class="align-middle">OCOOO4</td>
+      <td class="align-middle">• Pendiente a comprar</td>
+      <td class="align-middle">Reflector led</td>
+      <td class="align-middle">22/07/2025</td>
       <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
     </tr>
     <tr>
-      <td class="text-center align-middle">OCOOO3</td>
-      <td class="text-center align-middle">• Pendiente a comprar</td>
-      <td class="text-center align-middle">Lentes para iluminación led</td>
-      <td class="text-center align-middle">22/07/2025</td>
+      <td class="align-middle">OCOOO3</td>
+      <td class="align-middle">• Pendiente a comprar</td>
+      <td class="align-middle">Lentes para iluminación led</td>
+      <td class="align-middle">22/07/2025</td>
       <td class="text-center align-middle">4</td>
-      <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
-      <td class="text-center align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
     </tr>
 
   </tbody>
