--- a/App_LUMINOVA/templates/compras/compras_lista_oc.html
+++ b/App_LUMINOVA/templates/compras/compras_lista_oc.html
@@ -13,7 +13,7 @@
     <h1 class="text center">{{ titulo_seccion }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <a href="#" class="btn btn-primary">
-            <i class="bi bi-plus-circle"></i> Nueva Orden de Compra
+            <i class="bi bi-plus-circle"></i> Nueva Órden de Compra
         </a>
     </div>
 </div>
@@ -22,17 +22,17 @@
 
 <div class="table-responsive mt-3">
     <table class="table table-hover">
-        <thead style="background-color: #014BAC;">
+        <thead>
             <tr>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">N° OC</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Fecha Creación</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Proveedor</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Insumo Principal</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Cantidad</th>
-                <th class="text-end align-middle" style="background-color: #0d6efd; color: white;">Total</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Estado</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Tracking</th>
-                <th class="text-center align-middle" style="background-color: #0d6efd; color: white;">Acciones</th>
+                <th class="align-middle color-thead">N° OC</th>
+                <th class="align-middle color-thead">Fecha Creación</th>
+                <th class="align-middle color-thead" >Proveedor</th>
+                <th class="align-middle color-thead" >Insumo Principal</th>
+                <th class="align-middle color-thead" >Cantidad</th>
+                <th class="align-middle color-thead" >Total</th>
+                <th class="align-middle color-thead" >Estado</th>
+                <th class="align-middle color-thead" >Tracking</th>
+                <th class="text-center align-middle color-thead" >Acciones</th>
             </tr>
         </thead>
         <tbody>
