--- a/App_LUMINOVA/templates/ventas/ventas_sidebar.html
+++ b/App_LUMINOVA/templates/ventas/ventas_sidebar.html
@@ -34,8 +34,8 @@
                 </a>
             </li>
             <li class="nav-item mt-2">
-                <a class="nav-link {% if '/auditoria/' in request.path %}active{% endif %} text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:proveedor_list' %}" style="border-radius: 25px;">
-                    <i class="bi bi-clock-history me-2"></i> <span class="ms-2">Ver Proveedores</span>
+                <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center {% if request.path == url_proveedor_list %}active{% endif %}" href="{% url 'App_LUMINOVA:proveedor_list' %}" style="border-radius: 25px;">
+                    <i class="bi bi-person-lines-fill"></i> <span class="ms-2">Ver Proveedores</span>
                 </a>
             </li>
             {# Futuro: Botón para "Generar Facturas" podría ir aquí o ser una acción en la lista de OVs #}
