Cambio de colores

--- a/App_LUMINOVA/static/css/custom.css
+++ b/App_LUMINOVA/static/css/custom.css
@@ -41,7 +41,7 @@ nav.sidebar .nav-link.custom-active-button.active {
 }
 
 .color-thead{
-    background-color: #0d6efd !important;
+    background-color:  #014BAC !important;
     color: white !important;
 }
 
